# scarb-burn

./: Cargo.toml  README.md
src/: main.rs  profiler.rs
tests/data/: falcon.sierra.json  falcon_args.json
